
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
int _ismbcupper( unsigned int c )
{
    return ((c) >= 0x8260 && (c) <= 0x8279);
}
